# MADS-DAV

./: .default_config.json  .gitignore  .lefthook.yml  README.md  checklist.md  config.example.toml  config.toml  pyproject.toml  streamlit_app.py  streamlit_settings.toml
.devcontainer/: devcontainer.json
dashboards/: README.md  dashboard_1.py  dashboard_2.py  dashboard_3.py  dashboard_4.py  run_dash.sh
data/sim/: correlation.csv
dev/: preprocess.ipynb
leerdoelen/: les1.md
notebooks/: 01-cleaning.ipynb  02-comparing_categories.ipynb  03-time.ipynb  03.2-statistics-of-time.ipynb  04.1-distributions.ipynb  04.2-distribution_fitting.ipynb  05.1-relationships.ipynb  05.2-correlation.ipynb  06.1-dimensionality_reduction.ipynb  06.2-modelling.ipynb  101_classes.ipynb  102_paths.ipynb  6.3.1-tanach_ingest.ipynb  6.3.2-tanach_preprocess.ipynb  6.3.3-tanach_model.ipynb  6.4_huggingface.ipynb  7.0_social_graphs_dashboard.ipynb
presentations/: DAV_4.qmd
references/codestyle/: 01_git_basics.md  01_path.md  02_trunk_based_git.md  02_version_management.md  03_dependencies_management.md  CodestyleStandards.md  add_a_readme.md  cookiecutter.md  encapsulation.md  linting.md  loguru.md  never_hardcode.md  open_closed.md  pathlib.md  pydantic.md  typehinting.md
references/leerdoelen/: les1.md  les2.md  les3.md  les4.md  les5.md  les6.md  les7.md
src/: model.py  pathtest.py  preprocess.py  settings.py
src/wa_analyzer/: filehandler.py  humanhasher.py  model.py  network_analysis.py  network_cli.py  open_closed.py  pathtest.py  preprocess.py  settings.py
