[project]
name = "wa-analyzer"
version = "0.3.1"
description = "Code for the Master of Applied Data Science course Data Analysis and Visualization"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
dependencies = [
    "seaborn>=0.13.1",
    "numpy>=1.26.3",
    "pydantic>=2.5.3",
    "pandas>=2.2.0",
    "loguru>=0.7.2",
    "pyarrow>=15.0.0",
    "click>=8.1.7",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.1",
]

requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
"analyzer" = "wa_analyzer.preprocess:main"

[project.optional-dependencies]
huggingface = [
    "transformers>=4.38.2",
    "torch>=2.2.1",
    "sentence-transformers>=2.5.1",
]

plotting = [
    "plotly>=5.18.0",
    "streamlit>=1.31.1",
    "mads-datasets>=0.3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.384",
    "isort>=5.13.2",
    "ipython>=8.28.0",
    "jupyter>=1.0.0",
]
universal = true

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wa_analyzer"]

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
pretty = true
