[project]
name = "wa-analyzer"
version = "0.4.1"
description = "Code for the Master of Applied Data Science course Data Analysis and Visualization"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "mads-datasets>=0.3.14",
    "networkx>=3.4.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.43.1",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
"analyzer" = "wa_analyzer.preprocess:main"
"graphdashboard" = "wa_analyzer.network_cli:main"

[project.urls]
GitHub = "https://github.com/raoulg/MADS-DAV"

[project.optional-dependencies]
huggingface = [
    "sentence-transformers>=3.3.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
plotting = [
    "mads-datasets>=0.3.14",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
]


[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "notebooktester>=0.2.0",
    "ruff>=0.8.6",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_analyzer"]

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
pretty = true
